--- a/modules/ROOT/pages/deployment/services/s-list/app-registry.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/app-registry.adoc
@@ -8,21 +8,21 @@
 
 {description}
 
-Administrators can set default applications on a per mime type basis and also allow the creation of new files for certain mime types. This per mime type configuration also features a description, file extension option and an icon.
+Administrators can set default applications on a per MIME type basis and also allow the creation of new files for certain MIME types. This per MIME type configuration also features a description, file extension option and an icon.
 
 == Default Values
 
 * App-Registry listens on port 9240 by default.
 
-== Mime Type Configuration / Creation Allow List
+== MIME Type Configuration / Creation Allow List
 
-The apps will register their supported mime types automatically, so that users can open supported files with them.
+The apps will register their supported MIME types automatically, so that users can open supported files with them.
 
-Administrators can set default applications on a per mime type basis and also allow the creation of new files for certain mime types. This, per mime type configuration, also features a description, file extension option and an icon.
+Administrators can set default applications for each MIME type and also allow the creation of new files for certain mime types. This, per MIME type configuration, also features a description, file extension option and an icon.
 
-=== Mime Type Configuration
+=== MIME Type Configuration
 
-In order to modify the mime type config, you need to set `STORAGE_APP_REGISTRY_MIMETYPES_JSON` environment variable to a valid JSON file with content like this:
+In order to modify the MIME type config, you need to set `STORAGE_APP_REGISTRY_MIMETYPES_JSON` environment variable to a valid JSON file with content like this:
 
 [source.json]
 ----
@@ -52,19 +52,19 @@ Fields::
 +
 --
 * `mime_type` +
-The mime type you want to configure.
+The MIME type you want to configure.
 * `extension` +
 The file extension to be used for new files.
 * `name` +
-The name of the file / mime type.
+The name of the file / MIME type.
 * `description` +
-The human-readable description of the file / mime type.
+The human-readable description of the file / MIME type.
 * `icon` +
-The URL to an icon which should be used for that mime type.
+The URL to an icon which should be used for that MIME type.
 * `default_app` +
-The name of the default app which opens this mime type when the user doesn’t specify one.
+The name of the default app which opens this MIME type if the user doesn’t specify one.
 * `allow_creation` +
-Whether a user should be able to create new file from that mime type (true or false).
+Whether a user should be able to create new files of that MIME type (true or false).
 --
 
 == App Drivers
@@ -73,7 +73,7 @@ App drivers represent apps if the app is not able to register itself. Currently 
 
 === CS3org WOPI Server App Driver
 
-The CS3org WOPI server app driver is included in Infinite Scale by default. It needs at least one WOPI compliant app like Collabora, OnlyOffice or the Microsoft Online Server or a CS3org WOPI bridge supported app like CodiMD or Etherpad and the CS3org WOPI server.
+The CS3org WOPI server app driver is included in Infinite Scale by default. It needs at least one WOPI-compliant app like Collabora, OnlyOffice or the Microsoft Online Server or a CS3org WOPI bridge supported app like CodiMD or Etherpad and the CS3org WOPI server.
 
 The configuration of the actual app provider in a xref:deployment/container/orchestration/orchestration.adoc#docker-compose-examples[docker-compose example] can be found in the full `ocis-wopi` example directory especially in the config sections `ocis-appprovider-collabora` and `ocis-appprovider-onlyoffice`.
 
