--- a/modules/ROOT/pages/deployment/services/_special-envvar.adoc
+++ b/modules/ROOT/pages/deployment/services/_special-envvar.adoc
@@ -6,7 +6,7 @@ when a content is created, we can fix this here and in env-vars-special-scope.ad
 ////
 
 tag::service_tab_1[]
-[width="100%",cols="30%,70%",options="header",]
+[width="100%",cols="30%,70%",options="header"]
 |===
 | Name
 | Description
@@ -25,7 +25,7 @@ Note to get the current list of services started by default, you need to run `oc
 end::service_tab_1[]
 
 tag::service_tab_2[]
-[width="100%",cols="30%,70%",options="header",]
+[width="100%",cols="30%,70%",options="header"]
 |===
 | Name
 | Description
@@ -44,7 +44,7 @@ Note to get the current list of services started by default, you need to run `oc
 end::service_tab_2[]
 
 tag::service_tab_3[]
-[width="100%",cols="30%,70%",options="header",]
+[width="100%",cols="30%,70%",options="header"]
 |===
 | Name
 | Description
