--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -46,6 +46,7 @@
 **** xref:deployment/services/s-list/nats.adoc[NATS]
 **** xref:deployment/services/s-list/notifications.adoc[Notifications]
 **** xref:deployment/services/s-list/ocdav.adoc[OCDAV]
+**** xref:deployment/services/s-list/ocm.adoc[OCM]
 **** xref:deployment/services/s-list/ocs.adoc[OCS]
 **** xref:deployment/services/s-list/policies.adoc[Policies]
 **** xref:deployment/services/s-list/postprocessing.adoc[Postprocessing]
