Just a small typo fix in OCM

--- a/modules/ROOT/pages/deployment/services/s-list/ocm.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/ocm.adoc
@@ -40,7 +40,7 @@ Example for a `providers.json` file:
         "full_name": "Example provider",
         "organization": "ownCloud",
         "domain": "example.com",
-        "homepage": "https://example.com.com",
+        "homepage": "https://example.com",
         "services": [
             {
                 "endpoint": {
