--- a/modules/ROOT/pages/prerequisites/prerequisites.adoc
+++ b/modules/ROOT/pages/prerequisites/prerequisites.adoc
@@ -240,10 +240,9 @@ For _best performance_, _stability_, _support_, and _full functionality_ we offi
 * openSUSE Leap 15.2 and 15.3
 * Ubuntu 20.04 and 22.04
 
-== Authorization and Authentication (IDP)
-ownCloud Infinite Scale is dependent on Open ID Connect, therefore a connection to an identity provider (IDP) is mandatory.
-Konnect is included, however it has a limited scope and is therefore only recommended for up to 500 users and if you do not have a central IDP.
-Keycloak (with openLDAP) and MS ADFS (with AD) are supported. For additional IDPs please contact sales@owncloud.com.
+== Usermanagement, Authorization and Authentication
+
+Infinite Scale provides out of the box a minimal OpenID Connect provider via the xref:{s-path}/idp.adoc[IDP Service] and a minimal LDAP service via the xref:{s-path}/idm.adoc[IDM Service]. Both services a limited in the provided functionality, see the referenced servcies for important details. These services can be used for small environments like up to a view hundred users. For enterprise environments, it is highly recommended using enterprise grade external software like KeyCloak plus openLDAP or MS ADFS with Active Directory, which can be configured in the respective service. Please use the {oc-contact-url}[ownCloud contact form] to get in touch if other than the named IDP / IDM providers are required.
 
 == Additional Software
 
@@ -252,7 +251,6 @@ It is strongly recommend to use a reverse proxy for:
 . security reasons,
 . load balancing and
 . high availability.
-
 
 The Infinite Scale documentation will use *traefik* for examples, but you can use NGINX, Apache or others too. All three products provide either a binary or docker file to download.
 
