--- a/modules/ROOT/pages/deployment/services/s-list/thumbnails.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/thumbnails.adoc
@@ -8,6 +8,8 @@
 
 {description} It retrieves the sources at the location where the user files are stored and saves the thumbnails where system files are stored. Those locations have defaults but can be manually defined via environment variables.
 
+Note that for developers, more information is available with regards querying thumbnails in the services section of the https://owncloud.dev[Developer Documentation].
+
 == Default Values
 
 * Thumbnails listens on port 9185 by default.
@@ -28,10 +30,10 @@ The relevant environment variables defining file locations are:
 | Having a default set by the Infinite Scale code, but if defined, used as base path for other services.
 
 | `STORAGE_USERS_OCIS_ROOT`
-| Source files, defaults to (1) plus path component, but can be freely defined if required.  
+| Source files, defaults to ^(1)^ plus path component, but can be freely defined if required.  
 
 | `THUMBNAILS_FILESYSTEMSTORAGE_ROOT`
-| Target files, defaults to (1) plus path component, but can be freely defined if required.  
+| Target files, defaults to ^(1)^ plus path component, but can be freely defined if required.  
 |===
 
 === Thumbnail Location
@@ -79,17 +81,6 @@ Various resolutions can be defined via `THUMBNAILS_RESOLUTIONS`. A requestor can
 | Returned
 | 15x10  
 |===
-
-=== Thumbnail Processors
-
-Starting with Infinite Scale 5.0, thumbnail image generation can be configured by defining different processors. A processor handed over as part of the request forces Infinite Scale to render a thumbnail in a format that does not crop the image. Without using a processor, thumbnail images are always scaled to fit the given frame. The way how a processor creates the thumbnail image can be defined by one of the processors available from the list below:
-
-* `resize`
-* `fit`
-* `fill`
-* `thumbnail`
-
-To apply one of those processors, a query parameter has to be added to the request, e.g. `?processor=fit`
 
 === Deleting Thumbnails
 
