--- a/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
@@ -53,13 +53,16 @@ To use custom post-processing steps, you need a custom service listening to the 
 
 === Workflow
 
-When setting a custom post-processing step (eg. "customstep") the postprocessing service will eventually send an event during post-processing. The event will be of the type `StartPostprocessingStep` with its field StepToStart set to "customstep". When the custom service receives this event, it can safely execute its actions. The post-processing service will wait until it has finished its work. The event contains further information (like filename, executing user, size, ...) and required tokens or URLs to download the file in case byte inspection is necessary.
+When defining a custom postprocessing step (eg. `"customstep"`), the postprocessing service will eventually sent an event during postprocessing. The event will be of type `StartPostprocessingStep` with its field `StepToStart` set to `"customstep"`. When the service defined as custom step receives this event, it can safely execute its actions, the postprocessing service will wait until it has finished its work. The event contains further information (filename, executing user, size, ...) and also required tokens and urls to download the file in case byte inspection is necessary.
 
-Once the custom service has finished its work, it should send an event of the type `PostprocessingFinished` via the configured event system. This event needs to contain a `FinishedStep` field set to "customstep". It also must contain the outcome of the step, which can be one of:
+Once the service defined as custom step has finished its work, it should sent an event of type `PostprocessingFinished` via the configured events system back to the postprocessing service. This event needs to contain a `FinishedStep` field set to `"customstep"`. It also must contain the outcome of the step, which can be one of the following:
 
-* `delete` (abort post-processing, delete the file), 
-* `abort` (abort post-processing, keep the file) and 
-* `continue` (continue post-processing, this is the success case).
+* `delete`: Abort postprocessing, delete the file.
+* `abort`: Abort postprocessing, keep the file.
+* `retry`: There was a problem that was most likely temporary and may be solved by trying again after some _backoff duration_. Retry runs automatically and is defined by the backoff behaviour as described below.
+* `continue`: Continue postprocessing, this is the success case.
+
+The backoff behavior as mentioned in the `retry` outcome can be configured using the `POSTPROCESSING_RETRY_BACKOFF_DURATION` and `POSTPROCESSING_MAX_RETRIES` environment variables. The backoff duration is calculated using the following formula after each failure: `backoff_duration = POSTPROCESSING_RETRY_BACKOFF_DURATION * 2^(number of failures - 1)`. This means that the time between the next round grows exponentially limited by the number of retries. Steps that still don't succeed after the maximum number of retries will be automatically moved to the `abort` state.
 
 == CLI Commands
 
