upgrade to antora 3

--- a/modules/ROOT/pages/architecture/architecture.adoc
+++ b/modules/ROOT/pages/architecture/architecture.adoc
@@ -41,7 +41,7 @@ ____
 The C4 model is a lean graphical notation technique for modelling the architecture of software systems. It is based on a structural decomposition of a system into containers and components and relies on existing modelling techniques such as the Unified Modelling Language (UML) or Entity Relation Diagrams (ERD) for the more detailed decomposition of the architectural building blocks.
 ____
 
-Use this link to download the link:{attachmentsdir}/architecture/infinite-scale-c4-model.dsl[Infinite Scale C4 Model] raw description file.
+Use this link to download the xref:attachment$/architecture/infinite-scale-c4-model.dsl[Infinite Scale C4 Model] raw description file.
 
 image::architecture/c4-ocis-system-context.svg[Infinite Scale System Context,width=400]
 
