--- a/modules/ROOT/pages/deployment/services/env-vars-special-scope.adoc
+++ b/modules/ROOT/pages/deployment/services/env-vars-special-scope.adoc
@@ -30,28 +30,23 @@ The following environment variables are only available with the xref:deployment/
 --
 include::./_special-envvar.adoc[tag=service_tab_1]
 --
-{service_tab_2_tab_text}::
-+
---
-include::./_special-envvar.adoc[tag=service_tab_2]
---
-{service_tab_3_tab_text}::
-+
---
-include::./_special-envvar.adoc[tag=service_tab_3]
---
 ====
 
 == Extended Environment Variables
 
-// note that if a description of an extended envvar is missing, you need to fix this in:
-// https://github.com/owncloud/ocis/blob/master/docs/helpers/extended_vars.yaml
-// see the readme.md file in that folder
+////
+note that if a description of an extended envvar is missing, you need to fix this in:
+https://github.com/owncloud/ocis/blob/master/docs/helpers/extended_vars.yaml
+see the readme.md file in that folder.
+IMPORTANT, extended envvars do not have a extended_deprecation.adoc file. we therefore must set the attribute to true.
+////
  
 :service_name: extended
 :no_deprecation: true
 
 include::partial$deployment/services/env-and-yaml.adoc[]
+
+// IMPORTANT, global envvars currently do not have a global_deprecation.adoc file. we therefore must set the attribute to true.
 
 == Global Environment Variables
 
