--- a/modules/ROOT/pages/conf-examples/office/ext-files/env.adoc
+++ b/modules/ROOT/pages/conf-examples/office/ext-files/env.adoc
@@ -3,7 +3,7 @@ Note that this page is created because when the contents of the included yaml is
 
 The source content comes from github.
 
-Note that you cant create a attribute on the fly and handover to the include macro
+Note that you cant create an attribute on the fly and handover to the include macro.
 
 We need to allow substitution of attributes first, then macros
 ////
@@ -11,9 +11,9 @@ We need to allow substitution of attributes first, then macros
 :noindex:
 
 [caption=]
-.Source: link:{composer-raw-url}{compose_tab_2}{composer-final-path}/ocis_wopi/.env[]
+.Source: link:{composer-raw-url}{compose_tab_1}{composer-final-path}/ocis_wopi/.env[]
 {empty}
 [source,yaml]
 ----
-include::{composer-raw-url}{compose_tab_2}{composer-final-path}/ocis_wopi/.env[]
+include::{composer-raw-url}{compose_tab_1}{composer-final-path}/ocis_wopi/.env[]
 ----
