--- a/modules/ROOT/pages/deployment/services/s-list/storage-users.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/storage-users.adoc
@@ -21,7 +21,7 @@ Starting with Infinite Scale version 3.0.0, the default backend for metadata swi
 
 == Graceful Shutdown
 
-Starting with Infinite Scale version 4.0.0, you can define a graceful shutdown period for the `storage-users` service.
+With Infinite Scale, you can define a graceful shutdown period for the `storage-users` service.
 
 IMPORTANT: The graceful shutdown period is only applicable if the `storage-users` service runs as standalone service. It does not apply if the `storage-users` service runs as part of the single binary or as single Docker environment. To build an environment where the `storage-users` service runs as a standalone service, you must start two instances, one _without_ the `storage-users` service and one _only with_ the the `storage-users` service. Note that both instances must be able to communicate on the same network. 
 
