--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -20,6 +20,7 @@
 **** xref:deployment/services/deployment-considerations.adoc[Deployment Considerations]
 **** xref:deployment/services/env-var-note.adoc[Environment Variable Notes]
 **** xref:deployment/services/env-vars-special-scope.adoc[Environment Variables with Special Scope]
+**** xref:deployment/services/env-var-changes.adoc[Environment Variable Changes]
 **** xref:deployment/services/caching.adoc[Caching and Persistence]
 **** xref:deployment/services/gateways.adoc[Gateways]
 **** xref:deployment/services/logging.adoc[Logging]
