using ascii bullets instead of *

--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -179,36 +179,36 @@ The following environment variables can overwrite the base data path if required
 --
 [source,subs="+callouts,macros,attributes+"]
 ----
-* xref:{s-path}/auth-basic.adoc[OCIS_LDAP_CACERT;AUTH_BASIC_LDAP_CACERT, window=_blank]
-* xref:{s-path}/graph.adoc[OCIS_LDAP_CACERT;GRAPH_LDAP_CACERT, window=_blank]
-* xref:{s-path}/groups.adoc[OCIS_LDAP_CACERT;GROUPS_LDAP_CACERT, window=_blank]
-* xref:{s-path}/idm.adoc[IDM_LDAPS_CERT, window=_blank]
-* xref:{s-path}/idm.adoc[IDM_LDAPS_KEY, window=_blank]
-* xref:{s-path}/idm.adoc[IDM_DATABASE_PATH, window=_blank]
-* xref:{s-path}/idp.adoc[IDP_ENCRYPTION_SECRET_FILE, window=_blank]
-* xref:{s-path}/idp.adoc[IDP_SIGNING_PRIVATE_KEY_FILES, window=_blank]
-* xref:{s-path}/idp.adoc[IDP_TRANSPORT_TLS_CERT, window=_blank]
-* xref:{s-path}/idp.adoc[IDP_TRANSPORT_TLS_KEY, window=_blank]
-* xref:{s-path}/nats.adoc[NATS_NATS_STORE_DIR, window=_blank]
-* xref:{s-path}/nats.adoc[NATS_TLS_CERT, window=_blank]
-* xref:{s-path}/nats.adoc[NATS_TLS_KEY, window=_blank]
-* xref:{s-path}/ocm.adoc[OCM_OCM_INVITE_MANAGER_JSON_FILE, window=_blank]
-* xref:{s-path}/ocm.adoc[OCM_OCM_PROVIDER_AUTHORIZER_PROVIDERS_FILE, window=_blank]
-* xref:{s-path}/ocm.adoc[OCM_OCM_CORE_JSON_FILE, window=_blank]
-* xref:{s-path}/ocm.adoc[OCM_OCM_SHAREPROVIDER_JSON_FILE, window=_blank]
-* xref:{s-path}/proxy.adoc[PROXY_TRANSPORT_TLS_KEY, window=_blank]
-* xref:{s-path}/search.adoc[SEARCH_ENGINE_BLEVE_DATA_PATH, window=_blank] <1>
-* xref:{s-path}/settings.adoc[SETTINGS_DATA_PATH, window=_blank]
-* xref:{s-path}/sharing.adoc[SHARING_USER_JSON_FILE, window=_blank]
-* xref:{s-path}/sharing.adoc[SHARING_PUBLIC_JSON_FILE, window=_blank]
-* xref:{s-path}/store.adoc[STORE_DATA_PATH, window=_blank]
-* xref:{s-path}/storage-system.adoc[STORAGE_SYSTEM_OCIS_ROOT, window=_blank]
-* xref:{s-path}/storage-users.adoc[STORAGE_USERS_OCIS_ROOT, window=_blank]
-* xref:{s-path}/storage-users.adoc[STORAGE_USERS_S3NG_ROOT, window=_blank]
-* xref:{s-path}/storage-users.adoc[STORAGE_USERS_OWNCLOUDSQL_DATADIR, window=_blank]
-* xref:{s-path}/storage-users.adoc[STORAGE_USERS_OWNCLOUDSQL_UPLOADINFO_DIR, window=_blank]
-* xref:{s-path}/thumbnails.adoc[THUMBNAILS_FILESYSTEMSTORAGE_ROOT, window=_blank] <1>
-* xref:{s-path}/users.adoc[OCIS_LDAP_CACERT;USERS_LDAP_CACERT, window=_blank]
+• xref:{s-path}/auth-basic.adoc[OCIS_LDAP_CACERT;AUTH_BASIC_LDAP_CACERT, window=_blank]
+• xref:{s-path}/graph.adoc[OCIS_LDAP_CACERT;GRAPH_LDAP_CACERT, window=_blank]
+• xref:{s-path}/groups.adoc[OCIS_LDAP_CACERT;GROUPS_LDAP_CACERT, window=_blank]
+• xref:{s-path}/idm.adoc[IDM_LDAPS_CERT, window=_blank]
+• xref:{s-path}/idm.adoc[IDM_LDAPS_KEY, window=_blank]
+• xref:{s-path}/idm.adoc[IDM_DATABASE_PATH, window=_blank]
+• xref:{s-path}/idp.adoc[IDP_ENCRYPTION_SECRET_FILE, window=_blank]
+• xref:{s-path}/idp.adoc[IDP_SIGNING_PRIVATE_KEY_FILES, window=_blank]
+• xref:{s-path}/idp.adoc[IDP_TRANSPORT_TLS_CERT, window=_blank]
+• xref:{s-path}/idp.adoc[IDP_TRANSPORT_TLS_KEY, window=_blank]
+• xref:{s-path}/nats.adoc[NATS_NATS_STORE_DIR, window=_blank]
+• xref:{s-path}/nats.adoc[NATS_TLS_CERT, window=_blank]
+• xref:{s-path}/nats.adoc[NATS_TLS_KEY, window=_blank]
+• xref:{s-path}/ocm.adoc[OCM_OCM_INVITE_MANAGER_JSON_FILE, window=_blank]
+• xref:{s-path}/ocm.adoc[OCM_OCM_PROVIDER_AUTHORIZER_PROVIDERS_FILE, window=_blank]
+• xref:{s-path}/ocm.adoc[OCM_OCM_CORE_JSON_FILE, window=_blank]
+• xref:{s-path}/ocm.adoc[OCM_OCM_SHAREPROVIDER_JSON_FILE, window=_blank]
+• xref:{s-path}/proxy.adoc[PROXY_TRANSPORT_TLS_KEY, window=_blank]
+• xref:{s-path}/search.adoc[SEARCH_ENGINE_BLEVE_DATA_PATH, window=_blank] <1>
+• xref:{s-path}/settings.adoc[SETTINGS_DATA_PATH, window=_blank]
+• xref:{s-path}/sharing.adoc[SHARING_USER_JSON_FILE, window=_blank]
+• xref:{s-path}/sharing.adoc[SHARING_PUBLIC_JSON_FILE, window=_blank]
+• xref:{s-path}/store.adoc[STORE_DATA_PATH, window=_blank]
+• xref:{s-path}/storage-system.adoc[STORAGE_SYSTEM_OCIS_ROOT, window=_blank]
+• xref:{s-path}/storage-users.adoc[STORAGE_USERS_OCIS_ROOT, window=_blank]
+• xref:{s-path}/storage-users.adoc[STORAGE_USERS_S3NG_ROOT, window=_blank]
+• xref:{s-path}/storage-users.adoc[STORAGE_USERS_OWNCLOUDSQL_DATADIR, window=_blank]
+• xref:{s-path}/storage-users.adoc[STORAGE_USERS_OWNCLOUDSQL_UPLOADINFO_DIR, window=_blank]
+• xref:{s-path}/thumbnails.adoc[THUMBNAILS_FILESYSTEMSTORAGE_ROOT, window=_blank] <1>
+• xref:{s-path}/users.adoc[OCIS_LDAP_CACERT;USERS_LDAP_CACERT, window=_blank]
 ----
 <1> Note that it is recommended for these services to configure an individual path due to expected higher data quantities on larger installations, see the important note on possible impacts below.
 --
